2006-12-02  Mukund Sivaraman  <muks@mukund.org>

	* devel-docs/debug-plug-ins.txt: added a recipe for debugging
	plug-ins

2006-12-02  Mukund Sivaraman  <muks@mukund.org>

	* configure.in: dropped the required libcurl version to 7.15.1
	* plug-ins/Makefile.am: made uri build on win32 if libcurl is
	detected

2006-12-01  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/film.c: applied patch from Aurimas Juška. Fixes
	crash when opening layers with offsets and/or smaller than image
	(bug #364429).

2006-11-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppropwidgets.c (gimp_prop_color_button_new):
	removed obsolete parameter from gtk-doc comment.

2006-11-30  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimp.def
	* libgimpbase/gimpbase.def: move around version number symbols
	here too. Fixes bug #380658.

2006-11-28  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimp.[ch]: removed gimp_foo_version variables.

	* libgimpbase/gimpenv.[ch]: added them here.

	* app/sanity.c: added sanity_check_gimp() and abort if the libgimp
	version gimp is compiled with is not exactly the same we encounter
	at runtime.

2006-11-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-api.h
	* plug-ins/pygimp/pygimp.h
	* plug-ins/pygimp/gimpmodule.c: export common object types via
	_PyGimp_API, and remove the PDBFunction_Type hack. Also define
	the common object structures here.

	* plug-ins/pygimp/pygimp.h: remove hack for Python < 2.3, since
	we require Python 2.3 now.

	* plug-ins/pygimp/gimpui.override
	* plug-ins/pygimp/gimpui.py: create and use specialized wrappers
	for get/set_active methods for GimpIntComboBox and derived types.
	Fixes #376102.

2006-11-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c: applied patch from Aurimas Juška
	that fixes conversion with dithering of transparency (bug #358851).

2006-11-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppropwidgets.c (gimp_prop_color_button_new): typo.
