@@ -119,10 +119,10 @@ gimp_paint_tool_init (GimpPaintTool *paint_tool)
 {
   GimpTool *tool = GIMP_TOOL (paint_tool);
 
-  gimp_tool_control_set_motion_mode     (tool->control,
-                                         GIMP_MOTION_MODE_EXACT);
-  gimp_tool_control_set_action_value_1  (tool->control,
-                                         "context/context-opacity-set");
+  gimp_tool_control_set_motion_mode (tool->control, GIMP_MOTION_MODE_EXACT);
+  gimp_tool_control_set_scroll_lock (tool->control, TRUE);
+  gimp_tool_control_set_action_value_1 (tool->control,
+                                        "context/context-opacity-set");
 
   paint_tool->pick_colors = FALSE;
   paint_tool->draw_line   = FALSE;
