@@ -1,3 +1,8 @@
+2006-12-03  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimppainttool.c (gimp_paint_tool_init): don't
+	autoscroll with paint tools.
+
 2006-12-02  Mukund Sivaraman  <muks@mukund.org>
 
 	* devel-docs/debug-plug-ins.txt: added a recipe for debugging
